--- a/default.html
+++ b/default.html
@@ -15,10 +15,10 @@
 
         <nav class="navbar">
             <a href="#home">Home</a>
-            <a href="#services">Services</a>
+            <a href="#services">Education</a>
             <a href="#skills">Skills</a>
-            <a href="#education">Education</a>
-            <a href="#experience">Experience</a>
+            <a href="#education">Services</a>
+            <a href="#experience">Testimonials</a>
             <a href="#contact">Contact</a>
         </nav>
 
@@ -95,6 +95,97 @@
                 </div>
         </div>
     </section>
+    <section class="skills" id="skills">
+        <h2 class="heading">Skills</h2>
+
+        <div class="skills-container">
+            <div class="skill-box" id="skillContainer">
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill1.png" alt="" id="icon-skills">
+                        <span>PYTHON</span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill2.webp" alt="" id="icon-skills">
+                        <span>HTML5</span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill3.png" alt="" id="icon-skills">
+                        <span>CSS3</span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill4.webp" alt="" id="icon-skills">
+                        <span>JS</span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill5.webp" alt="" id="icon-skills">
+                        <span>JAVA</span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill6.png" alt="" id="icon-skills">
+                        <span>REACT</span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill7.png" alt="" id="icon-skills">
+                        <span>DJANGO</span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill8.png" alt="" id="icon-skills">
+                        <span>GIT</span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill9.png" alt="" id="icon-skills">
+                        <span>GITHUB</span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill10.webp" alt="" id="icon-skills">
+                        <span>PHP</span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill11.png" alt="" id="icon-skills">
+                        <span>AWS</span>
+                    </div>
+                </div>
+
+                <div class="bar">
+                    <div class="info">
+                        <img src="/assets/image/skills/skill12.png" alt="" id="icon-skills">
+                        <span>Linux</span>
+                    </div>
+                </div>
+            </div>          
+        </div>
+    </section>
         <section class="services" id="services">
             <h2 class="heading">Services</h2>
 
@@ -130,7 +221,7 @@
         </section>
             <section class="testimonials" id="testimonials">
                 <div class="testimonials-box">
-                    <h2 class="heading">testimonials</h2>
+                    <h2 class="heading">Testimonials</h2>
 
                     <div class="wrapper">
                         <div class="testimonials-item">
@@ -218,20 +309,25 @@
             </li>
 
             <li>
-                <a href="#">Services</a>
+                <a href="#">Education</a>
             </li>
 
             <li>
-                <a href="#">About Me</a>
+                <a href="#">Skills</a>
             </li>
 
             <li>
-                <a href="#">Contact</a>
+                <a href="#">Service</a>
             </li>
 
             <li>
                 <a href="#">Testimonials</a>
             </li>
+
+            <li>
+                <a href="#">Contact Me</a>
+            </li>
+
         </ul>
         <p class="copyright">
             © Ítalo Ferreira Cardoso | All Rights Reserved
